@@ -449,7 +449,7 @@ class HazardCalculator(BaseCalculator):
         self.riskmodel = rm = readinput.get_risk_model(self.oqparam)
         if not self.riskmodel:
             parent = self.datastore.parent
-            if parent and 'composite_risk_model' in parent:
+            if 'composite_risk_model' in parent:
                 self.riskmodel = riskinput.read_composite_risk_model(parent)
             return
         self.save_params()  # re-save oqparam
